fix: more contrast colors to acessibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,6 @@ li {
   }
 
   button {
-    @apply bg-primary-500 font-bold text-white py-2 px-4 rounded-lg transition hover:bg-primary-700 focus:bg-primary-900;
+    @apply bg-primary-600 font-bold text-white py-2 px-4 rounded-lg transition hover:bg-primary-700 focus:bg-primary-900;
   }
 }
